Version 2.40
---------
 * Add OpenSUSE 16 to build scripts
 * Use trixie for docker container
 * venv/create.sh fails to successfully build libnbd without python setuptools
 (#290)

Version 2.39
---------
 * Add fedora 42 to build scripts.
 * Gracefully handle network attached disk devices, show error message and
 hint (#286)

Version 2.38
---------
 [Francisco Javier]
 * virtnbdbackup: reuse existing sftp connections during backup. (#283)

 [Michael Ablassmeier]
 * virtnbdmap: replaying changes may fail with "[Errno 22] Invalid argument":
 the NBD device sometimes needs some time to settle, wait until it is seekable
 to the end of the block list instead of failing.
 * virtnbdbackup: During full backup, all old checkpoints are removed.
 Sometimes there might be situations where bitmaps are not existent anymore.
 Now, during full backup, checkpoint consistency is validated prior to
 removal, and checkpoints tied to  non-existent bitmaps will be removed with
 VIR_DOMAIN_CHECKPOINT_DELETE_METADATA_ONLY flags enabled, to allow flawless
 full backups. The utility will issue WARNINGS in this case.

 See discussion (#285)

Version 2.37
---------
 * Add missing nbdkit and python plugin to docker container image. (#282)

Version 2.36
---------
 * virtnbdbackup: add `--pause` option: Suspend and resume virtual machine
 while starting backup job. This can be useful for virtual machines where
 freezing file systems using the qemu guest agent is not possible.

Version 2.35
---------
 * virtnbdrestore: fix restore issue in case virtual machine is using
 volume based disk configuration: the restore process attempted to identify
 the volumes which do not exist anymore. Adjust virtual machine config and
 reset the volume base setting to a file based notation. (#280)

Version 2.34
---------
 * virtnbdbackup: show hint about virtual machine config adjustment
 possibility in case raw devices are attached.
 * virtnbdrestore: do not show warning if no data-file setting is found in